fix(css): make banner progress button contrast
Use Banner_bg_color instead of accent_color for banner progress bar.
Ensures that the progress bar contrasts with the button

--- a/data/styles/ProgressButton.css
+++ b/data/styles/ProgressButton.css
@@ -26,6 +26,14 @@
     background-repeat: no-repeat;
 }
 
+.banner .progress-button {
+    background-image: linear-gradient(
+        0deg,
+        @banner_bg_color 0.125em,
+        transparent 0.125em
+    );
+}
+
 .progress-button:dir(rtl) {
     background-position: calc(100% - 2px);
 }
